...
    "introDesc1" : "Interested in to learn from the best teachers around the world?",
    "introDesc2" : "Looking for a private teacher? Book a private meeting now!",
    "introDesc3" : "Start teaching right now and share your valuable knowledge.",
    "introDesc4" : "Start learning from the best instructors in different topics.",

    "getStart" : "Get Started",
    "login" : "Login",
    "signup" : "Signup",
    "skipLogin" : "Skip Login",

    "createAccount" : "Create an Account",
    "createAccountDesc" : "Join us now and start learning and teaching",
    "yourEmail" : "Your Email",
...
